Simplify collection handling in ConfigurationImpl